# FaceDetection_openMPI

./: CMakeLists.txt  README.md  videoFaceBlur.cpp
