cmake_minimum_required(VERSION 2.8)
project( videoFaceBlur )
add_definitions(-DOMPI_SKIP_MPICXX)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package (MPI REQUIRED)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
add_executable( videoFaceBlur videoFaceBlur.cpp )
target_link_libraries( videoFaceBlur ${OpenCV_LIBS} )
target_link_libraries( videoFaceBlur ${MPI_C_LIBRARIES})
 set(CMAKE_THREAD_LIBS_INIT "-lpthread")
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
      set(CMAKE_HAVE_THREADS_LIBRARY 1)
      set(CMAKE_USE_WIN32_THREADS_INIT 0)
      set(CMAKE_USE_PTHREADS_INIT 1)
      set(THREADS_PREFER_PTHREAD_FLAG ON)
